# cat-dog-prediction

./: .dockerignore  .dvcignore  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  EXECUTION.md  Makefile  README.md  SCREEN_RECORDING_GUIDE.md  docker-compose.yaml  dvc.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: cd.yaml  ci.yaml  docker-publish.yaml  pr-validation.yaml
configs/: config.yaml
data/raw/: .gitkeep
deploy/docker-compose/: docker-compose.prod.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml
models/: .gitkeep
scripts/: deploy.sh  docker_build_run.sh  simulate_predictions.py  smoke_test.sh
src/: __init__.py  train.py
src/api/: __init__.py  app.py  middleware.py
src/data/: __init__.py  dataloader.py  download.py  preprocess.py
src/models/: __init__.py  cnn.py
src/monitoring/: __init__.py  logging_config.py  metrics.py  performance_tracker.py
src/utils/: __init__.py  config.py
tests/: __init__.py  test_api.py  test_model.py  test_monitoring.py  test_preprocess.py
